--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,43 +1,53 @@
-<app-navbar></app-navbar>
-<div>
-    <h2>Contact Form</h2>
-    <form #myForm="ngForm" (ngSubmit)="submitForm(myForm)">
-      <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" ngModel required>
-      </div>
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" ngModel required>
-      </div>
-      <div>
-        <button type="submit">Submit</button>
-      </div>
-    </form>
-  
-    <div *ngIf="loading">
-      <p>Loading...</p>
+<!-- home.component.html -->
+<!-- <app-navbar></app-navbar> -->
+
+<div class="container">
+  <h2>Contact Form</h2>
+  <form class="example-form" #myForm="ngForm" (ngSubmit)="submitForm(myForm)" *ngIf="isEdit===false">
+    <mat-form-field class="example-full-width">
+      <mat-label>Name</mat-label>
+      <input matInput placeholder="" id="name" name="name" ngModel required>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="" id="email" name="email" ngModel required>
+    </mat-form-field>
+
+    <div class="example-full-width">
+      <button mat-raised-button color="primary">Submit</button>
     </div>
-  
-    <div *ngIf="data && data.length > 0 && !loading">
-        <h2>Retrieved Data</h2>
-        <table>
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Email</th>
-              <!-- Add more columns as needed -->
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of data">
-              <td>{{ item?.name }}</td>
-              <td>{{ item?.email }}</td>
-              <!-- Add more columns as needed -->
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      
+  </form>
+
+  <div *ngIf="loading">
+    <p>Loading...</p>
   </div>
-  
+
+  <table mat-table [dataSource]="data" class="mat-elevation-z8" *ngIf="isEdit===false">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{element.name}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let element">{{element.email}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon class="action-icon" (click)="editItem(element)">edit</mat-icon>
+        <mat-icon class="action-icon" (click)="deleteItem(element)">delete</mat-icon>
+      </td>
+    </ng-container>
+
+    
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <div *ngIf="isEdit===true">
+    <app-edit-dialogue [element]="editData" [isEdit]="isEdit"></app-edit-dialogue>
+  </div>
+</div>
