--- a/src/app/edit-dialogue/edit-dialogue.component.html
+++ b/src/app/edit-dialogue/edit-dialogue.component.html
@@ -1,14 +1,18 @@
 <form class="example-form" #myForm2="ngForm" (ngSubmit)="updateForm(myForm2)">
     <mat-form-field class="example-full-width">
       <mat-label>Name</mat-label>
-      <input matInput placeholder="" id="name" name="name" ngModel required [ngModel]="element.name">
+      <input matInput placeholder="" id="name" name="name" ngModel required [(ngModel)]="data.name">
     </mat-form-field>
     <mat-form-field class="example-full-width">
       <mat-label>Email</mat-label>
-      <input matInput placeholder="" id="email" name="email" ngModel required [ngModel]="element.email">
+      <input matInput placeholder="" id="email" name="email" ngModel required [(ngModel)]="data.email">
     </mat-form-field>
 
     <div class="example-full-width">
       <button mat-raised-button color="primary">Update</button>
+    </div>
+    
+    <div class="example-full-width">
+      <button mat-raised-button color="warn" (click)="onNoClick()">Cancel</button>
     </div>
 </form>
