--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,12 +34,13 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon class="action-icon" (click)="editItem(element)">edit</mat-icon>
+        <!-- <mat-icon class="action-icon" (click)="editItem(element)">edit</mat-icon> -->
+        <mat-icon class="action-icon" (click)="openEditDialog(element)">edit</mat-icon>
         <mat-icon class="action-icon" (click)="deleteItem(element)">delete</mat-icon>
       </td>
     </ng-container>
 
-    
+
 
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
