features like spinner snackbar etc added

--- a/src/app/edit-dialogue/edit-dialogue.component.html
+++ b/src/app/edit-dialogue/edit-dialogue.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
 
     <div class="example-full-width">
-      <button mat-raised-button color="primary">Update</button>
+      <button mat-raised-button color="primary" (click)="openSnackBar('Data updated successfully')">Update</button>
     </div>
     
     <div class="example-full-width">
